--- a/packages/yd-libs/package.json
+++ b/packages/yd-libs/package.json
@@ -8,5 +8,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "gitHead": "b1cc4af89ddb546ebbdd9bcb085a610e55383ca0"
 }
