--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "publish": "lerna publish"
+    "publish": "lerna publish",
+    "publish:libs": "lerna publish --scope @yideng/libs",  
+    "publish:hooks": "lerna publish --scope @yideng/hooks" 
   },
   "keywords": [],
   "author": "",
