--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "publish": "lerna publish",
-    "publish:libs": "lerna publish --scope @yideng/libs",  
-    "publish:hooks": "lerna publish --scope @yideng/hooks" 
+    "publish:libs": "lerna publish --include-filtered-dependencies --scope @yideng/libs",  
+    "publish:hooks": "lerna publish --include-filtered-dependencies --scope @yideng/hooks" 
   },
   "keywords": [],
   "author": "",
