--- a/packages/yd-hooks/package.json
+++ b/packages/yd-hooks/package.json
@@ -11,8 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@yideng/libs": "workspace:*",
-    "lerna": "^8.2.4"
+    "@yideng/libs": "workspace:*"
   },
   "gitHead": "b1cc4af89ddb546ebbdd9bcb085a610e55383ca0"
 }
